refactor: reduce train wrecks (#425)